--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
+    <style>
+      body{
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
